--- a/models/ml.ipynb
+++ b/models/ml.ipynb
@@ -68,7 +68,7 @@
     "    \"ASAP\": \"As Soon As Possible\",\n",
     "    \"ATK\": \"At The Keyboard\",\n",
     "    \"ATM\": \"At The Moment\",\n",
-    "    \"A3\": \"Anytime, Anywhere, Anyplace\",\n",
+    "    \"A3\": \"Anytime Anywhere Anyplace\",\n",
     "    \"BAK\": \"Back At Keyboard\",\n",
     "    \"BBL\": \"Be Back Later\",\n",
     "    \"BBS\": \"Be Back Soon\",\n",
@@ -90,7 +90,7 @@
     "    \"GG\": \"Good Game\",\n",
     "    \"GN\": \"Good Night\",\n",
     "    \"GMTA\": \"Great Minds Think Alike\",\n",
-    "    \"GR8\": \"Great!\",\n",
+    "    \"GR8\": \"Great\",\n",
     "    \"G9\": \"Genius\",\n",
     "    \"IC\": \"I See\",\n",
     "    \"ICQ\": \"I Seek you\",\n",
@@ -108,7 +108,7 @@
     "    \"M8\": \"Mate\",\n",
     "    \"NRN\": \"No Reply Necessary\",\n",
     "    \"OIC\": \"Oh I See\",\n",
-    "    \"PITA\": \"Pain In The A..\",\n",
+    "    \"PITA\": \"Pain In The Ass\",\n",
     "    \"PRT\": \"Party\",\n",
     "    \"PRW\": \"Parents Are Watching\",\n",
     "    \"ROFL\": \"Rolling On The Floor Laughing\",\n",
@@ -138,7 +138,7 @@
     "    \"ILY\": \"I love you\",\n",
     "    \"IMU\": \"I miss you\",\n",
     "    \"ADIH\": \"Another day in hell\",\n",
-    "    \"ZZZ\": \"Sleeping, bored, tired\",\n",
+    "    \"ZZZ\": \"Sleeping bored tired\",\n",
     "    \"WYWH\": \"Wish you were here\",\n",
     "    \"TIME\": \"Tears in my eyes\",\n",
     "    \"BAE\": \"Before anyone else\",\n",
